@@ -1,3 +1,11 @@
+2004-02-12  Pierre-Luc Paour <gallery@paour.com> (1.3.1-b2)
+
+	* Fixed slideshow on the Mac (the top of the image was
+	  obscured by the menu bar). I can't figure out why the Mac VM
+	  will not go into full-screen mode...
+	* Fixed a potential VM killer bug with going into slideshow
+	  mode.
+
 2004-02-12  Pierre-Luc Paour <gallery@paour.com> (1.3.1-b1)
 
 	* Fixed text color in list and tree when selected.
